# kwin-forceblur

src/: CMakeLists.txt  blur.cpp  blur.h
src/config/: config.cpp  config.h
src/kcm/: CMakeLists.txt  blur_config.cpp  blur_config.ui
src/windowrules/: mergedwindowruleproperties.h  windowrule.cpp  windowrule.h  windowrulelist.cpp  windowrulelist.h  windowruleproperty.h
